improved code in commit command